# cjolowicz-cookiecutter-hypermodern

./: .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/cjolowicz_cookiecutter_hypermodern/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
