[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cjolowicz-cookiecutter-hypermodern"
version = "0.1.0"
description = "Cjolowicz Cookiecutter Hypermodern"
authors = [
    { name = "Mohsen Hasan Nezhad", email = "mohsenhasannzehad@outlook.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/MohsenHNSJ/cjolowicz-cookiecutter-hypermodern"
repository = "https://github.com/MohsenHNSJ/cjolowicz-cookiecutter-hypermodern"
documentation = "https://cjolowicz-cookiecutter-hypermodern.readthedocs.io"
Changelog = "https://github.com/MohsenHNSJ/cjolowicz-cookiecutter-hypermodern/releases"

[tool.poetry]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.1.8"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.19.1"
black = ">=24.10.0"
coverage = { extras = ["toml"], version = ">=7.6.10" }
darglint = ">=1.8.1"
flake8 = ">=7.1.1"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=24.12.12"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
furo = ">=2024.8.6"
isort = ">=5.13.2"
mypy = ">=1.14.1"
pep8-naming = ">=0.14.1"
pre-commit = ">=4.1.0"
pre-commit-hooks = ">=5.0.0"
pytest = ">=8.3.4"
pyupgrade = ">=3.19.1"
safety = ">=3.2.14"
sphinx = ">=8.1.3"
sphinx-autobuild = ">=2024.10.3"
sphinx-click = ">=6.0.0"
typeguard = ">=4.4.1"
xdoctest = { extras = ["colors"], version = ">=1.2.0" }
myst-parser = { version = ">=4.0.0" }

[tool.poetry.scripts]
cjolowicz-cookiecutter-hypermodern = "cjolowicz_cookiecutter_hypermodern.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cjolowicz_cookiecutter_hypermodern", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
